js/js.translator/testData/incremental/invalidationWithPL/interfaceBecomeClass/lib2/l2.6.kt
open class Bar : Foo() {
    override fun getSomething() = 6
}
